# utf8regex

./: .gitignore  .hgignore  .travis.yml  Makefile  Makefile.in  config.h  configure.ac  regcomp.c  regex.c  regex.h  regex_internal.h  regexec.c  test.c  utf8re-langinfo.h  utf8re-locale.h  utf8re-wchar.c  utf8re-wchar.h
doc/: README  TODO  changelog
private/: autogen  build-source-tarball  update-version
tools/: build-source-tarball
