# Copyright © 2009, 2010, 2012 Jakub Wilk <jwilk@jwilk.net>

# This library is free software; you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2.1 of the
# License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# Lesser General Public License for more details.

AC_PREREQ([2.61])
AC_INIT([utf8regex], [0.2.7], [jwilk@jwilk.net])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AX_CFLAGS_WARN_ALL

AC_PROG_INSTALL

LT_INIT([win32-dll])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
